--- a/app/src/main/res/layout/fragment_game_miejska.xml
+++ b/app/src/main/res/layout/fragment_game_miejska.xml
@@ -4,7 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?colorSecondary"
-
     android:orientation="vertical"
     tools:context=".HomeFragments.GameMiejskaFragment">
 
@@ -24,11 +23,24 @@
         android:textStyle="bold"
         android:text="@string/game_miejska"/>
 
+    <LinearLayout
+        android:layout_marginTop="50dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <Spinner
+            android:id="@+id/cityGamesSpinner"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="?colorPrimaryVariant"
+            android:spinnerMode="dropdown"/>
+    </LinearLayout>
+
     <Button
         android:id="@+id/startGameBtn"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="50dp"
         android:layout_width="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:layout_gravity="center|bottom"
         android:layout_height="wrap_content"
         android:text="Start game" />
 
